--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "src/styles.scss",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
