--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.png", "src/assets"],
             "styles": [
               "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
