--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.3",
+    "flowbite": "^2.3.0",
     "jwt-decode": "^4.0.0",
     "ngx-owl-carousel-o": "^17.0.0",
     "ngx-spinner": "^16.0.2",
